# reu2026-workshop

./: Dockerfile  LICENSE  README.md
.devcontainer/: devcontainer.json
.github/workflows/: ros2-colcon.yml
src/my_cpp_pkg/: CMakeLists.txt  package.xml
src/my_cpp_pkg/include/my_cpp_pkg/: add_numbers.hpp
src/my_cpp_pkg/src/: add_numbers.cpp  talker.cpp
src/my_cpp_pkg/test/: test_add_numbers.cpp  test_talker_integration.py
src/my_python_pkg/: package.xml  setup.py
src/my_python_pkg/my_python_pkg/: prod_numbers.py
src/my_python_pkg/test/: test_prod_numbers.py
